<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingHorizontal="16dp"
    android:paddingVertical="12dp"
    android:background="@android:color/background_light">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/avatar_background"
        android:contentDescription="@string/avatar_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/avatar"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/userNickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/userName"
        app:layout_constraintEnd_toEndOf="@id/userName"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <Button
        android:id="@+id/followButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subscribe_button"
        android:textSize="14sp"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@+id/messageButton"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:cornerRadius="8dp"
        app:backgroundTint="@android:color/transparent"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/messageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Написать сообщение"
        android:textSize="14sp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@id/followButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/followButton"
        app:cornerRadius="8dp"/>

    <LinearLayout
        android:id="@+id/statsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/followButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/followersCount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/followers_count"
            android:textColor="@android:color/black"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/followingCount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/following_count"
            android:textColor="@android:color/black"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/postsCount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/posts_count"
            android:textColor="@android:color/black"
            android:textAlignment="center" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/statsContainer">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:contentDescription="@string/posts_list_description"
            android:textAlignment="center" />
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>